@@ -28,7 +28,7 @@ plugins {
 }
 
 group = "de.tum.in.www1.artemis"
-version = "4.11.2"
+version = "4.11.3"
 description = "Interactive Learning with Individual Feedback"
 
 sourceCompatibility=15
@@ -61,7 +61,7 @@ spotless {
     java {
         target project.fileTree(project.rootDir) {
             include "**/*.java"
-            exclude "**/src/main/java/de/tum/in/www1/artemis/service/connectors/BambooService.java", "**/src/main/java/de/tum/in/www1/artemis/config/SecurityConfiguration.java", "**/src/test/resources/test-data/repository-export/EncodingISO_8559_1.java", "**/node_modules/**", "**/out/**", "**/repos/**", "**/build/**", "**/src/main/generated/**", "**/src/main/resources/templates/**"
+            exclude "**/src/main/java/de/tum/in/www1/artemis/service/connectors/BambooService.java", "**/src/main/java/de/tum/in/www1/artemis/config/SecurityConfiguration.java", "**/src/main/java/de/tum/in/www1/artemis/config/SAML2Configuration.java", "**/src/test/resources/test-data/repository-export/EncodingISO_8559_1.java", "**/node_modules/**", "**/out/**", "**/repos/**", "**/build/**", "**/src/main/generated/**", "**/src/main/resources/templates/**"
         }
         importOrderFile "artemis-spotless.importorder"
         eclipse().configFile "artemis-spotless-style.xml"
@@ -89,31 +89,9 @@ test {
     jvmArgs "--illegal-access=warn"
 }
 
-task integrationTest(type: Test) {
-    useJUnitPlatform()
-    description = "Execute integration tests."
-    group = "verification"
-    include "**/*IT*", "**/*IntTest*"
-
-    testLogging {
-        events "FAILED", "SKIPPED"
-    }
-
-    maxHeapSize = "1024m"
-    jvmArgs "-XX:MaxPermSize=512m --illegal-access=warn"
-    reports.html.enabled = false
-}
-
-check.dependsOn integrationTest
-
 task testReport(type: TestReport) {
     destinationDir = file("$buildDir/reports/tests")
     reportOn test
-}
-
-task integrationTestReport(type: TestReport) {
-    destinationDir = file("$buildDir/reports/tests")
-    reportOn integrationTest
 }
 
 jacoco {
@@ -147,7 +125,7 @@ jacocoTestCoverageVerification {
                 counter = "INSTRUCTION"
                 value = "COVEREDRATIO"
                 // TODO: in the future the following value should become at least 0.90
-                minimum = 0.868
+                minimum = 0.870
             }
             limit {
                 counter = "CLASS"
@@ -218,7 +196,7 @@ dependencies {
     implementation "javax.transaction:javax.transaction-api:1.3"
     implementation "org.hibernate:hibernate-jcache:${hibernate_version}"
     implementation "org.hibernate:hibernate-entitymanager:${hibernate_version}"
-    implementation "org.hibernate.validator:hibernate-validator:6.2.0.Final"
+    implementation "org.hibernate.validator:hibernate-validator:7.0.1.Final"
     implementation "org.liquibase:liquibase-core:4.3.2"
     implementation "org.springframework.boot:spring-boot-loader-tools:${spring_boot_version}"
     implementation "org.springframework.boot:spring-boot-starter-mail:${spring_boot_version}"
@@ -235,13 +213,13 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${spring_boot_version}"
 
     implementation "org.springframework.ldap:spring-ldap-core:2.3.3.RELEASE"
-    implementation "org.springframework.data:spring-data-ldap:2.4.6"
+    implementation "org.springframework.data:spring-data-ldap:2.4.7"
 
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.0.2"
     implementation "org.springframework.cloud:spring-cloud-starter-config:3.0.3"
     implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.13.RELEASE"
 
-    implementation "io.netty:netty-all:4.1.62.Final"
+    implementation "io.netty:netty-all:4.1.63.Final"
     implementation "io.projectreactor.netty:reactor-netty:1.0.5"
     implementation "org.springframework:spring-messaging:5.3.5"
 
@@ -250,8 +228,10 @@ dependencies {
     implementation "org.springframework.security:spring-security-web:${spring_security_version}"
     implementation "org.springframework.security:spring-security-messaging:${spring_security_version}"
     implementation "org.springframework.security:spring-security-ldap:${spring_security_version}"
+    implementation "org.springframework.security:spring-security-saml2-service-provider:${spring_security_version}"
     implementation "org.xmlbeam:xmlprojector:1.4.19"
     implementation "io.jsonwebtoken:jjwt-api:0.11.2"
+    implementation "org.bouncycastle:bcprov-jdk15on:1.68"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.2"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.2"
     implementation ("io.springfox:springfox-swagger2:3.0.0") {
@@ -263,7 +243,7 @@ dependencies {
     implementation "org.zalando:problem-spring-web:0.26.2"
     implementation "com.ibm.icu:icu4j:68.2"
     implementation "com.github.seancfoley:ipaddress:5.3.3"
-    implementation "org.apache.maven:maven-model:3.6.3"
+    implementation "org.apache.maven:maven-model:3.8.1"
 
     annotationProcessor "org.hibernate:hibernate-jpamodelgen:${hibernate_version}"
     annotationProcessor ("org.glassfish.jaxb:jaxb-runtime:${jaxb_runtime_version}") {
@@ -315,16 +295,6 @@ tasks.withType(Test) {
         showCauses true
         showStackTraces true
 
-        // set options for log level DEBUG and INFO
-        debug {
-            events TestLogEvent.STARTED,
-                TestLogEvent.FAILED,
-                TestLogEvent.PASSED,
-                TestLogEvent.SKIPPED,
-                TestLogEvent.STANDARD_ERROR,
-                TestLogEvent.STANDARD_OUT
-            exceptionFormat TestExceptionFormat.FULL
-        }
         info.events = debug.events
         info.exceptionFormat = debug.exceptionFormat
 
@@ -340,7 +310,7 @@ tasks.withType(Test) {
 }
 
 wrapper {
-    gradleVersion = "7.0-rc-1"
+    gradleVersion = "7.0-rc-2"
 }
 
 task stage(dependsOn: "bootWar") {
